[gd_scene load_steps=12 format=3 uid="uid://c83a3sspfk4ti"]

[ext_resource type="Script" uid="uid://0m428wc7oyif" path="res://scenes/save_slots.gd" id="1_7yfsu"]
[ext_resource type="Shader" uid="uid://e2j6278cvro3" path="res://shaders/shader_for_wallpapers.gdshader" id="2_c3250"]
[ext_resource type="Texture2D" uid="uid://d15s26xjcwn8k" path="res://assets/images.png" id="3_5i64a"]
[ext_resource type="FontFile" uid="uid://l8jp5rdidxrp" path="res://fonts/SuperPixel-m2L8j.ttf" id="4_o8exh"]
[ext_resource type="FontFile" uid="uid://cu8vx1vb0i5qy" path="res://fonts/Pixelout Personal Use Only.ttf" id="5_c3250"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2mm3c"]
shader = ExtResource("2_c3250")
shader_parameter/darkness = 1.0
shader_parameter/desaturation = 0.0
shader_parameter/brightness = 1.0
shader_parameter/contrast = 1.0
shader_parameter/tint_strength = 0.0
shader_parameter/alpha = 0.795

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g8b2y"]
bg_color = Color(0.443137, 0.247059, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_81rur"]
bg_color = Color(0.729412, 0.298039, 0.403922, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aty8o"]
bg_color = Color(0.443137, 0.247059, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qta7k"]
bg_color = Color(0.729412, 0.298039, 0.403922, 1)

[sub_resource type="Theme" id="Theme_5i64a"]

[node name="SaveSlots" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7yfsu")

[node name="background" type="Sprite2D" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_2mm3c")
position = Vector2(270, 480)
texture = ExtResource("3_5i64a")
region_enabled = true
region_rect = Rect2(0, 0, 540, 960)

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 36.0
offset_top = 239.0
offset_right = 514.0
offset_bottom = 365.0
theme_override_colors/font_color = Color(0.729412, 0.439216, 0.8, 1)
theme_override_fonts/font = ExtResource("4_o8exh")
theme_override_font_sizes/font_size = 40
text = "Choose the 
save slot"
horizontal_alignment = 1

[node name="Slot1" type="Button" parent="."]
layout_mode = 0
offset_left = 100.0
offset_top = 433.0
offset_right = 444.0
offset_bottom = 529.0
theme_override_fonts/font = ExtResource("4_o8exh")
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_g8b2y")
theme_override_styles/normal = SubResource("StyleBoxFlat_81rur")
text = "Slot one"

[node name="Slot2" type="Button" parent="."]
offset_left = 99.0
offset_top = 571.0
offset_right = 443.0
offset_bottom = 667.0
theme_override_fonts/font = ExtResource("4_o8exh")
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_aty8o")
theme_override_styles/normal = SubResource("StyleBoxFlat_qta7k")
text = "Slot two"

[node name="Slot3" type="Button" parent="."]
layout_mode = 0
offset_left = 103.0
offset_top = 709.0
offset_right = 447.0
offset_bottom = 805.0
theme_override_fonts/font = ExtResource("4_o8exh")
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_aty8o")
theme_override_styles/normal = SubResource("StyleBoxFlat_qta7k")
text = "Slot three"

[node name="Back" type="Button" parent="."]
offset_left = 17.0
offset_top = 875.0
offset_right = 160.0
offset_bottom = 949.0
theme_override_fonts/font = ExtResource("4_o8exh")
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_aty8o")
theme_override_styles/normal = SubResource("StyleBoxFlat_qta7k")
text = "Back"

[node name="Clear" type="Button" parent="."]
offset_left = 368.0
offset_top = 876.0
offset_right = 530.0
offset_bottom = 948.0
theme_override_fonts/font = ExtResource("4_o8exh")
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_aty8o")
theme_override_styles/normal = SubResource("StyleBoxFlat_qta7k")
text = "Clear"

[node name="NameInput" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 166.0
offset_top = 341.0
offset_right = 377.0
offset_bottom = 414.0
theme = SubResource("Theme_5i64a")
theme_override_colors/clear_button_color_pressed = Color(0.988235, 0, 0.686275, 1)
theme_override_colors/clear_button_color = Color(0.988235, 0, 0.686275, 1)
theme_override_colors/selection_color = Color(0.988235, 0, 0.686275, 1)
theme_override_colors/caret_color = Color(0.988235, 0, 0.686275, 1)
theme_override_colors/font_placeholder_color = Color(0.988235, 0, 0.686275, 1)
theme_override_colors/font_outline_color = Color(0.988235, 0, 0.686275, 1)
theme_override_colors/font_selected_color = Color(0.988235, 0, 0.686275, 1)
theme_override_colors/font_uneditable_color = Color(0.988235, 0, 0.686275, 1)
theme_override_colors/font_color = Color(0.988235, 0, 0.686275, 1)
theme_override_fonts/font = ExtResource("5_c3250")
